# Model_Based_RL_for_Predictive_Human_Intent_Recognition

./: COMPREHENSIVE_FINAL_VALIDATION_REPORT_COMPLETE.md  COMPREHENSIVE_TEST_REPORT.md  DIRECTORY_CLEANUP_ANALYSIS.md  Dockerfile.monitor  FINAL_VALIDATION_SUMMARY_AND_RECOMMENDATIONS.md  INSTALLATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE1_ANALYSIS_REPORT.md  README.md  REPRODUCIBILITY_FRAMEWORK.md  RESEARCH_GRADE_VALIDATION_COMPLETE.md  TECHNICAL_CONTRIBUTIONS_AND_NOVELTY.md  cleanup_log_phase2a.txt  cleanup_report_phase2a_20250901_000003.json  cleanup_script_template_20250831_234734.sh  comprehensive_project_validation.py  comprehensive_system_test.py  debug_calibration.py  debug_mpc_init.py  demo_complete_system.py  docker-compose.yml  example_system_usage.py  file_analysis_system.py  generate_results.py  integration_test_log.txt  obsolete_files_investigation_report.md  project_health_check.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  requirements_temp.txt  run_ablation_studies.py  run_experiments.py  run_performance_benchmarks.py  run_tests.py  safe_generated_cleanup.py  setup.py  setup_verification.py  test_working_pipeline.py  (+3 more)
ablation_study_results/: COMPREHENSIVE_ABLATION_STUDY_REPORT.md  ablation_gaussian_process_remove_gp.json  ablation_gaussian_process_simplified_kernel.json  ablation_intent_prediction_basic_prediction.json  ablation_mpc_controller_shorter_horizon.json  ablation_mpc_controller_simplified_constraints.json  ablation_rl_agent_no_exploration.json  ablation_rl_agent_remove_rl.json  ablation_rl_agent_simplified_policy.json  ablation_safety_system_basic_monitoring.json  ablation_safety_system_simplified_constraints.json
baseline_comparison_results/: comparison_classical_mpc.json  comparison_gaussian_process_regression.json  comparison_interactive_pomdp.json  comparison_lstm_behavior_predictor.json  comparison_social_forces_model.json  comparison_soft_actor-critic_(sac).json
data/synthetic/: synthetic_dataset_metadata.json
data/synthetic_full/: dataset_summary.json  synthetic_dataset_metadata.json
docs/mathematical_analysis/: Makefile  README.md  compile_docs.sh  main_document.tex  rl_theoretical_analysis.tex  theoretical_guarantees.tex
docs/safety/: COMPLIANCE_CHECKLIST.md  SAFETY_MANUAL.md
experiments/: baseline_comparisons.py  experiment_runner.py  scenario_definitions.py
final_validation_results/: automated_performance_report.json  detailed_validation_results.json
jekyll_site/: about.md  contact.md  methodology.md  results.md
jekyll_site/_layouts/: default.html
project2_human_intent_rl/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.loadtest  MATHEMATICAL_RIGOR_ENHANCEMENT_SUMMARY.md  PERFORMANCE_BENCHMARKING_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  VALIDATION_SUMMARY.md  config.yaml  dataset_validation_summary.py  debug_gradients.py  debug_lqr.py  debug_training.py  debug_trajectory.py  demo_final_integration.py  demo_gp_trajectory.py  file_analysis_report_20250831_234734.json  file_analysis_summary_20250831_234734.txt  integration_validation_report.json  phase2b_conservative_results.txt  phase2b_deletion_results.txt  production_benchmark.py  production_deployment_guide.py  reality_check_imports.py  run_baseline_comparisons.py  run_comprehensive_validation.py  run_dataset_integration_tests.py  run_final_system_validation.py  run_integration_tests.py  run_mathematical_validation.py  run_performance_tests.py  test_complete_system.py  test_core_functionality.py  test_dataset_integration.py  test_dependencies.py  test_integration.py  test_reality_check.py  test_sample_efficiency.py  (+1 more)
project2_human_intent_rl/experiments/: advanced_analysis.py  (+1 more)
scripts/: demo_mpc.py  generate_dataset.py  visualization_demo.py
tests/: comprehensive_test_suite.py  comprehensive_validation_suite.py  conftest.py  mathematical_validation_suite.py  test_bayesian_rl_suite.py  test_safe_rl_system.py
(+168 files in other folders)
